# altium-publish

./: .gitignore  README.md  altium-publish.example.yaml  pyproject.toml
altium_publish/: __init__.py  cli.py  config.py  github.py  scanner.py  template.py
altium_publish/converters/: __init__.py  bom.py  gerber.py  pdf.py  site.py  step.py
altium_publish/templates/: index.html
